fix: titles were not showing up because I changed the name was wrong fix: smoothbox styles were changing the base font-family fix: get_action_info now returns correctly the info on the action. previously it was returning the change: removed the drag support on the popup. it needs to be implemented better add: user/group selection mako def

--- a/swat/public/default/css/smoothbox.css
+++ b/swat/public/default/css/smoothbox.css
@@ -7,15 +7,15 @@
  *   http://www.opensource.org/licenses/mit-license.php
  */
 
-#TB_window {
-	font: 12px Arial, Helvetica, sans-serif;
-	color: #333333;
-}
-
-#TB_secondLine {
-	font: 10px Arial, Helvetica, sans-serif;
-	color:#666666;
-}
+/*#TB_window {*/
+/*	font: 12px Arial, Helvetica, sans-serif;*/
+/*	color: #333333;*/
+/*}*/
+/**/
+/*#TB_secondLine {*/
+/*	font: 10px Arial, Helvetica, sans-serif;*/
+/*	color:#666666;*/
+/*}*/
 
 /*#TB_overlay {
 	position: absolute;
@@ -76,31 +76,31 @@
 	padding:5px 0px 5px 0px;
 }
 
-#TB_load{
-	position: absolute;
-	display:none;
-	height:100px;
-	width:100px;
-	z-index:101;
-}
+/*#TB_load{*/
+/*	position: absolute;*/
+/*	display:none;*/
+/*	height:100px;*/
+/*	width:100px;*/
+/*	z-index:101;*/
+/*}*/
 
-#TB_HideSelect{
-	z-index:99;
-	position:absolute;
-	top: 0;
-	left: 0;
-	background-color:#fff;
-	border:none;
-}
+/*#TB_HideSelect{*/
+/*	z-index:99;*/
+/*	position:absolute;*/
+/*	top: 0;*/
+/*	left: 0;*/
+/*	background-color:#fff;*/
+/*	border:none;*/
+/*}*/
 
-#TB_iframeContent{
-	clear:both;
-	border:none;
-	margin-bottom:-1px;
-	margin-top:1px;
-}
+/*#TB_iframeContent{*/
+/*	clear:both;*/
+/*	border:none;*/
+/*	margin-bottom:-1px;*/
+/*	margin-top:1px;*/
+/*}*/
 
 /* IE6 */
-* html #TB_iframeContent{
-	margin-bottom:1px;
-}
+/** html #TB_iframeContent{*/
+/*	margin-bottom:1px;*/
+/*}*/
