--- a/swat/public/default/css/swat-default.css
+++ b/swat/public/default/css/swat-default.css
@@ -758,7 +758,7 @@ div.bulk-operations.bulk-bottom {
 
 /** Path Selection Popup **/
 ul.path-list {
-    font-size:100%;
+    font-size:85%;
 }
 
 ul.path-list li {
